created audit services and dockerfiles
